# LongMarch

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
code/: CMakeLists.txt  chang_zheng.cpp  chang_zheng.h  chang_zheng_pybind.cpp  long_march.cpp  long_march.h  long_march_pybind.cpp
code/cao_di/: CMakeLists.txt  cao_di.cpp  cao_di.cu  grassland.cpp  grassland.cu  grassland.h
code/cao_di/bvh/: CMakeLists.txt  bvh.cpp  bvh.h  bvh_cuda.cu  bvh_cuda.cuh  bvh_host.cpp  bvh_host.h  bvh_util.cpp  bvh_util.h
code/cao_di/d3d12/: CMakeLists.txt  adapter.cpp  adapter.h  buffer.cpp  buffer.h  command_allocator.cpp  command_allocator.h  command_list.cpp  command_list.h  command_queue.cpp  command_queue.h  d3d12util.cpp  d3d12util.h  descriptor_heap.cpp  descriptor_heap.h  device.cpp  device.h  device_feature_requirement.cpp  device_feature_requirement.h  direct3d12.cpp  direct3d12.h  dxgi_factory.cpp  dxgi_factory.h  fence.cpp  fence.h  image.cpp  image.h  pipeline_state.cpp  pipeline_state.h  root_signature.cpp  root_signature.h  shader_module.cpp  shader_module.h  swap_chain.cpp  swap_chain.h
code/cao_di/graphics/: CMakeLists.txt  acceleration_structure.cpp  acceleration_structure.h  buffer.cpp  buffer.h  command_context.cpp  command_context.h  core.cpp  core.h  graphics.cpp  graphics.h  graphics_util.cpp  graphics_util.h  image.cpp  image.h  interface.h  program.cpp  program.h  sampler.cpp  sampler.h  window.cpp  window.h
code/cao_di/imgui/: CMakeLists.txt
code/cao_di/math/: CMakeLists.txt  math.cpp  math.h  math_aabb.h  math_basics.h  math_ccd.h  math_mesh.cxx  math_mesh.h  math_mesh_sdf.cpp  math_mesh_sdf.h  math_polynomial.h  math_ray.h  math_spd_projection.h  math_static_collision.cpp  math_static_collision.h  math_svd.cpp  math_svd.h  math_triangle.h  math_util.h
code/cao_di/physics/: CMakeLists.txt  physics.cpp  physics.h  physics_util.cpp  physics_util.h
code/cao_di/util/: CMakeLists.txt  binary_search.h  deferred_process.cpp  deferred_process.h  device_clock.cpp  device_clock.h  double_ptr.cpp  double_ptr.h  event_manager.h  file_probe.cpp  fps_counter.cpp  fps_counter.h  log.cpp  metronome.cpp  metronome.h  sobol.cpp  sobol.h  string_convert.cpp  string_convert.h  util.cpp  util.h  util_util.cpp  util_util.h  vendor_id.cpp  virtual_file_system.cpp  virtual_file_system.h  windows_security_attributes.cpp  windows_security_attributes.h
code/cao_di/vulkan/: CMakeLists.txt  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  device.cpp  device.h  device_creation_assist.cpp  device_creation_assist.h  device_procedures.cpp  device_procedures.h  fence.cpp  fence.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  instance.cpp  instance.h  instance_procedures.cpp  instance_procedures.h  physical_device.cpp  physical_device.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  queue.cpp  queue.h  render_pass.cpp  render_pass.h  sampler.cpp  (+16 more)
code/contradium/: CMakeLists.txt  contradium.cpp  contradium.h
code/contradium/core/: core.cpp  core.h  core_util.cpp  core_util.h
code/contradium/pbd/: CMakeLists.txt  pbd.cpp  pbd.h  pbd_solver.cpp  pbd_solver.h  pbd_util.cpp  pbd_util.h
code/contradium/vbd/: vbd_entity.cpp  vbd_entity.h  vbd_solver.cpp  vbd_solver.h  vbd_util.cpp  vbd_util.h
code/grassland/: CMakeLists.txt  grassland.cpp  grassland.h
code/grassland/algebra/: CMakeLists.txt
code/grassland/bvh/: CMakeLists.txt  bvh.cpp  bvh.h  bvh_cuda.cu  bvh_cuda.cuh  bvh_host.cpp  bvh_host.h  bvh_util.cpp  bvh_util.h
code/grassland/d3d12/: CMakeLists.txt  adapter.cpp  adapter.h  buffer.cpp  buffer.h  command_allocator.cpp  command_allocator.h  command_list.cpp  command_list.h  command_queue.cpp  command_queue.h  d3d12.cpp  d3d12.h  d3d12util.cpp  d3d12util.h  descriptor_heap.cpp  descriptor_heap.h  device.cpp  device.h  device_feature_requirement.cpp  device_feature_requirement.h  direct3d12.cpp  direct3d12.h  dxgi_factory.cpp  dxgi_factory.h  fence.cpp  fence.h  image.cpp  image.h  pipeline_state.cpp  pipeline_state.h  root_signature.cpp  root_signature.h  shader_module.cpp  shader_module.h  swap_chain.cpp  swap_chain.h
code/grassland/geometry/: CMakeLists.txt  continuous_collision_detection.h  geometry.h  polygon.h  spd_project.h
code/grassland/graphics/: CMakeLists.txt  acceleration_structure.cpp  acceleration_structure.h  buffer.cpp  buffer.h  command_context.cpp  command_context.h  core.cpp  core.h  graphics.cpp  graphics.h  graphics_util.cpp  graphics_util.h  image.cpp  image.h  interface.cpp  interface.h  program.cpp  program.h  sampler.cpp  sampler.h  shader.cpp  shader.h  window.cpp  window.h
code/grassland/imgui/: CMakeLists.txt
code/grassland/math/: CMakeLists.txt  area_volume.h  continuous_collision_detection.h  math.cpp  math.h  math_aabb.h  math_basics.h  math_ccd.h  math_mesh.cpp  math_mesh.cxx  math_mesh.h  math_mesh_sdf.cpp  math_mesh_sdf.h  math_polynomial.h  math_ray.h  math_spd_projection.h  math_static_collision.cpp  math_static_collision.h  math_svd.cpp  math_svd.h  ray.h  (+4 more)
code/practium/: CMakeLists.txt  practium.cpp  practium.h
code/snow_mount/: CMakeLists.txt  snow_mount.cpp  snow_mount.h
code/snowberg/: CMakeLists.txt  snowberg.cpp  snowberg.h
code/sparkium/: CMakeLists.txt  sparkium.cpp  sparkium.h
code/sparks/: CMakeLists.txt  sparks.cpp  sparks.h
code/xing_huo/: CMakeLists.txt  sparks.cpp  xing_huo.cpp  xing_huo.h
code/xue_shan/: snow_mount.cpp  snow_mount.h  xue_shan.cpp
test/: AddTest.cmake  CMakeLists.txt
test/bvh/: bvh_test.cu
test/ccd_intersection/: main.cpp
test/geometry/: spd_projection_test.cpp
test/math/: ccd_intersection_test.cpp  cubic_polynomial_test.cpp  mesh_sdf.cpp  static_collision.cpp
test/physics/: function_derivative_test.cpp  function_derivative_test.h  function_derivative_test_composed.cpp  function_derivative_test_dihedral_angle.cpp  function_derivative_test_geometry_sdf.cu
(+1007 files in other folders)
