file(GLOB_RECURSE SOURCES "*.cpp" "*.h")

add_library(${CAO_DI_SUBLIB_NAME} ${SOURCES})

list(APPEND CAO_DI_LIBS ${CAO_DI_SUBLIB_NAME})
set(CAO_DI_LIBS ${CAO_DI_LIBS} PARENT_SCOPE)

target_include_directories(${CAO_DI_SUBLIB_NAME} PUBLIC ${LONGMARCH_INCLUDE_DIR} ${CUDA_INC_DIR})

target_link_libraries(${CAO_DI_SUBLIB_NAME} PUBLIC ${FMT_LIB_NAME} ${SPDLOG_LIB_NAME} ${PYBIND11_LIB_NAME} ${PYTHON3_LIB_NAME} ${CUDART_LIB_NAME} ${EIGEN3_LIB_NAME})

target_compile_definitions(${CAO_DI_SUBLIB_NAME} PUBLIC LONGMARCH_ASSETS_DIR="${LONGMARCH_ASSETS_DIR}")

if (LONGMARCH_CUDA_ENABLED)
    target_compile_definitions(${CAO_DI_SUBLIB_NAME} PUBLIC LONGMARCH_CUDA_ENABLED)
endif ()

if (LONGMARCH_CUDA_RUNTIME)
    target_compile_definitions(${CAO_DI_SUBLIB_NAME} PUBLIC LONGMARCH_CUDA_RUNTIME)
endif ()
