file(GLOB_RECURSE SOURCES "*.cpp" "*.h")

add_library(${SNOWBERG_SUBLIB_NAME} ${SOURCES})

list(APPEND SNOWBERG_LIBS ${SNOWBERG_SUBLIB_NAME})
set(SNOWBERG_LIBS ${SNOWBERG_LIBS} PARENT_SCOPE)

target_include_directories(${SNOWBERG_SUBLIB_NAME} PUBLIC ${LONGMARCH_INCLUDE_DIR})

target_link_libraries(${SNOWBERG_SUBLIB_NAME} PUBLIC Grassland ${FREETYPE_LIB_NAME})

PACK_SHADER_CODE(${SNOWBERG_SUBLIB_NAME})
