file(GLOB SOURCES "*.cpp" "*.h")

add_library(${XING_HUO_SUBLIB_NAME} ${SOURCES})

target_link_libraries(${XING_HUO_SUBLIB_NAME} PUBLIC ChangZheng)
list(APPEND XING_HUO_LIBS ${XING_HUO_SUBLIB_NAME})
set(XING_HUO_LIBS ${XING_HUO_LIBS} PARENT_SCOPE)

target_compile_definitions(${XING_HUO_SUBLIB_NAME} PUBLIC CHANGZHENG_XING_HUO_SHADERS="${CHANGZHENG_XING_HUO_SHADERS}")
