file(GLOB_RECURSE SOURCES "*.cpp" "*.h")

add_library(${XUE_SHAN_SUBLIB_NAME} ${SOURCES})

list(APPEND XUE_SHAN_LIBS ${XUE_SHAN_SUBLIB_NAME})
set(XUE_SHAN_LIBS ${XUE_SHAN_LIBS} PARENT_SCOPE)

target_include_directories(${XUE_SHAN_SUBLIB_NAME} PUBLIC ${CHANGZHENG_INCLUDE_DIR})

target_link_libraries(${XUE_SHAN_SUBLIB_NAME} PUBLIC CaoDi ${FREETYPE_LIB_NAME})

PACK_SHADER_CODE(${XUE_SHAN_SUBLIB_NAME})
